--- a/css/styles.css
+++ b/css/styles.css
@@ -1,81 +1,18 @@
 body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-header {
-  background-color: #333;
-  color: #fff;
-  padding: 1rem;
-}
-
-nav ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: space-around;
-}
-
-nav ul li {
-  display: inline;
-}
-
-nav ul li a {
-  color: #fff;
-  text-decoration: none;
-  padding: 0.5rem;
-}
-
-nav ul li a:hover {
-  background-color: #555;
-}
-
-main {
-  padding: 2rem;
-}
-
-#productos {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 1rem;
-  justify-content: space-around;
-}
-
-.card {
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  width: 300px;
-  padding: 1rem;
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+  font-family: "Roboto", sans-serif;
 }
 
 .card img {
-  max-width: 100%;
-  height: auto;
-  border-radius: 5px;
+  max-height: 150px;
+  object-fit: contain;
 }
 
-.card h5 {
-  margin-top: 1rem;
-  font-size: 1.25rem;
+#carrito-items .card {
+  flex-direction: row;
+  align-items: center;
 }
 
-.card p {
-  margin: 0.5rem 0;
-}
-
-.btn-primary {
-  background-color: #007bff;
-  color: #fff;
-  padding: 0.5rem 1rem;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.btn-primary:hover {
-  background-color: #0056b3;
+#carrito-items .card img {
+  max-height: 50px;
+  margin-right: 10px;
 }
